--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="de"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="de"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="de"> <![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="de"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="de"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="de"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="de"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
@@ -19,11 +19,11 @@
     <a class="logo ir" href="">Logoname</a>
     <nav id="navi" role="navigation">
       <ul>
-        <li><a href="">Startseite</a></li>
-        <li><a href="">Unterseite</a></li>
-        <li><a href="">Unterseite</a></li>
-        <li><a href="">Unterseite</a></li>
-        <li><a href="">Unterseite</a></li>
+        <li><a href="">Lorem</a></li>
+        <li><a href="">ipsum</a></li>
+        <li><a href="">dolor</a></li>
+        <li><a href="">sit</a></li>
+        <li><a href="">amet</a></li>
       </ul>
     </nav>
     <form id="searchform" role="search">
@@ -52,8 +52,6 @@
 
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
-
-<script src="assets/js/app.js"></script> -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="Assets/js/vendor/jquery-1.8.0.min.js"><\/script>')</script> -->
 </body></html>
