Changes to the searchform

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <li><a href="">amet</a></li>
       </ul>
     </nav>
-    <form id="searchform" role="search">
-      <input type="text" placeholder="Stichwort...">
+    <form class="searchform" role="search">
+      <input type="search" placeholder="Stichwort...">
       <input type="submit" value="Suchen">
     </form>
   </div>
