--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header id="header" role="banner">
 	<div class="wrapper">
 		<a class="logo ir" href="">Logoname</a>
-		<nav id="navi" role="navigation">
+		<nav class="nav site-nav" role="navigation">
 			<ul>
 				<li><a href="">Lorem</a></li>
 				<li><a href="">ipsum</a></li>
