--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header id="header" role="banner">
 	<div class="wrapper">
-		<a class="logo ir" href="">Logoname</a>
+                <a class="siteLogo ir" href="">Logoname</a>
 		<nav class="nav site-nav" role="navigation">
 			<ul>
 				<li><a href="">Lorem</a></li>
