Stacking grid-system

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 	<div class="wrapper">
 
 		<div class="row clearfix">
-			<div class="nine columns"> </div>
-			<div class="three columns"> </div>
+			<div class="first three columns"> </div>
+
+			<div class="six columns"> </div>
+
+			<div class="last three columns"> </div>
 		</div>
 
 	</div>
