Dummy .active class for nav's

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="siteLogo ir" href="">Logoname</a>
 		<nav class="nav site-nav" role="navigation">
 			<ul>
-				<li><a href="">Lorem</a></li>
+				<li class="active"><a href="">Lorem</a></li>
 				<li><a href="">ipsum</a></li>
 				<li><a href="">dolor</a></li>
 				<li><a href="">sit</a></li>
