--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Ihr Browser ist <em>veraltet!</em> <a href="http://browsehappy.com/">Updaten Sie ihren Browser</a> oder <a href="http://www.google.com/chromeframe/?redirect=true">installieren Sie die fehlende Erweiterung</a> um alle Funktionen zu genießen.</p><![endif]-->
 
-<header id="header" role="banner">
+<header class="site-header" role="banner">
 	<div class="wrapper">
                 <a class="siteLogo ir" href="">Logoname</a>
 		<nav class="nav site-nav" role="navigation">
@@ -47,7 +47,7 @@
 	</div>
 </div>
 
-<footer id="footer" role="contentinfo">
+<footer class="site-footer" role="contentinfo">
 	<div class="wrapper">
 
 	</div>
