Renaming #content to .site-content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</div>
 </header>
 
-<div id="content" role="main">
+<div class="site-content" role="main">
 	<div class="wrapper">
 
 		<div class="row clearfix">
