[TASK] Rename the SCSS grid module accordingly to the BEM-Scheme

--- a/Resources/Private/Elements/GridFourColumns.html
+++ b/Resources/Private/Elements/GridFourColumns.html
@@ -28,7 +28,7 @@
 </f:section>
 
 <f:section name="Main">
-	<div class="gw">
+	<div class="grid">
 		<div class="gi one-quarter">
 			<flux:flexform.renderContent area="first" />
 		</div>
