--- a/Resources/Private/Elements/GridThreeColumns.html
+++ b/Resources/Private/Elements/GridThreeColumns.html
@@ -25,7 +25,7 @@
 </f:section>
 
 <f:section name="Main">
-	<div class="gw">
+	<div class="grid">
 		<div class="gi one-third">
 			<flux:flexform.renderContent area="first" />
 		</div>
