--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -22,7 +22,7 @@
 </f:section>
 
 <f:section name="Main">
-	<div class="gw">
+	<div class="grid">
 		<div class="gi one-half">
 			<flux:flexform.renderContent area="first" />
 		</div>
