[MISC] Fix an typo

--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -3,7 +3,7 @@
 <f:layout name="Content" />
 
 <f:section name="Configuration">
-	<flux:flexform id="two-columns" label="Three Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
+	<flux:flexform id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
 		<flux:flexform.grid>
 			<flux:flexform.grid.row>
 				<flux:flexform.grid.column>
