--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -2,32 +2,34 @@
 
 <f:layout name="Content" />
 
-<f:section name="Configuration">
-	<flux:flexform id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
-		<flux:flexform.grid>
-			<flux:flexform.grid.row>
-				<flux:flexform.grid.column>
-					<flux:flexform.content name="first" label="First column" />
-				</flux:flexform.grid.column>
-				<flux:flexform.grid.column>
-					<flux:flexform.content name="second" label="Second column" />
-				</flux:flexform.grid.column>
-			</flux:flexform.grid.row>
-		</flux:flexform.grid>
-	</flux:flexform>
-</f:section>
+<div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
+	<f:section name="Configuration">
+		<flux:flexform id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
+			<flux:flexform.grid>
+				<flux:flexform.grid.row>
+					<flux:flexform.grid.column>
+						<flux:flexform.content name="first" label="First column" />
+					</flux:flexform.grid.column>
+					<flux:flexform.grid.column>
+						<flux:flexform.content name="second" label="Second column" />
+					</flux:flexform.grid.column>
+				</flux:flexform.grid.row>
+			</flux:flexform.grid>
+		</flux:flexform>
+	</f:section>
 
-<f:section name="Preview">
-	<flux:widget.grid />
-</f:section>
+	<f:section name="Preview">
+		<flux:widget.grid />
+	</f:section>
 
-<f:section name="Main">
-	<div class="grid">
-		<div class="gi one-half">
-			<flux:flexform.renderContent area="first" />
+	<f:section name="Main">
+		<div class="grid">
+			<div class="gi one-half">
+				<flux:flexform.renderContent area="first" />
+			</div>
+			<div class="gi one-half">
+				<flux:flexform.renderContent area="second" />
+			</div>
 		</div>
-		<div class="gi one-half">
-			<flux:flexform.renderContent area="second" />
-		</div>
-	</div>
-</f:section>
+	</f:section>
+</div>
