[MISC] Fix the name of the vhs namepsace in the XSD schema for all elements

--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -2,7 +2,7 @@
 
 <f:layout name="Content" />
 
-<div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
+<div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:vhs="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
 		<flux:flexform id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
 			<flux:flexform.grid>
