[MISC] Rename the name attributes of all flux content tags to enhance the code style consistency

--- a/Resources/Private/Elements/GridFourColumns.html
+++ b/Resources/Private/Elements/GridFourColumns.html
@@ -8,16 +8,16 @@
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="first" label="First column" />
+						<flux:flexform.content name="FirstColumn" label="First column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="second" label="Second column" />
+						<flux:flexform.content name="SecondColumn" label="Second column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="third" label="Third column" />
+						<flux:flexform.content name="ThirdColumn" label="Third column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="fourth" label="Fourth column" />
+						<flux:flexform.content name="FourthColumn" label="Fourth column" />
 					</flux:flexform.grid.column>
 				</flux:flexform.grid.row>
 			</flux:flexform.grid>
@@ -31,16 +31,16 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-quarter">
-				<flux:flexform.renderContent area="first" />
+				<flux:flexform.renderContent area="FirstColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:flexform.renderContent area="second" />
+				<flux:flexform.renderContent area="SecondColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:flexform.renderContent area="third" />
+				<flux:flexform.renderContent area="ThirdColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:flexform.renderContent area="fourth" />
+				<flux:flexform.renderContent area="FourthColumn" />
 			</div>
 		</div>
 	</f:section>
