--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -8,10 +8,10 @@
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="first" label="First column" />
+						<flux:flexform.content name="FirstColumn" label="First column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="second" label="Second column" />
+						<flux:flexform.content name="SecondColumn" label="Second column" />
 					</flux:flexform.grid.column>
 				</flux:flexform.grid.row>
 			</flux:flexform.grid>
@@ -25,10 +25,10 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-half">
-				<flux:flexform.renderContent area="first" />
+				<flux:flexform.renderContent area="FirstColumn" />
 			</div>
 			<div class="gi one-half">
-				<flux:flexform.renderContent area="second" />
+				<flux:flexform.renderContent area="SecondColumn" />
 			</div>
 		</div>
 	</f:section>
