--- a/Resources/Private/Elements/GridThreeColumns.html
+++ b/Resources/Private/Elements/GridThreeColumns.html
@@ -8,13 +8,13 @@
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="first" label="First column" />
+						<flux:flexform.content name="FirstColumn" label="First column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="second" label="Second column" />
+						<flux:flexform.content name="SecondColumn" label="Second column" />
 					</flux:flexform.grid.column>
 					<flux:flexform.grid.column>
-						<flux:flexform.content name="third" label="Third column" />
+						<flux:flexform.content name="ThirdColumn" label="Third column" />
 					</flux:flexform.grid.column>
 				</flux:flexform.grid.row>
 			</flux:flexform.grid>
@@ -28,13 +28,13 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="first" />
+				<flux:flexform.renderContent area="FirstColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="second" />
+				<flux:flexform.renderContent area="SecondColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="third" />
+				<flux:flexform.renderContent area="ThirdColumn" />
 			</div>
 		</div>
 	</f:section>
