--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -4,7 +4,7 @@
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:vhs="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:flexform id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
+		<flux:flexform id="two-columns" label="[GRID] Two Columns (1 | 1)" description="Provides two columns to be filled with content elements.">
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
 					<flux:flexform.grid.column>
