[MISC] Add backendLayout labels for all standard grid elements to increase the visual distinction from regular CEs

--- a/Resources/Private/Elements/GridFourColumns.html
+++ b/Resources/Private/Elements/GridFourColumns.html
@@ -25,6 +25,7 @@
 	</f:section>
 
 	<f:section name="Preview">
+		<strong>[GRID] Four Columns (1 | 1 | 1 | 1)</strong>
 		<flux:widget.grid />
 	</f:section>
 
