--- a/Resources/Private/Elements/GridTwoColumns.html
+++ b/Resources/Private/Elements/GridTwoColumns.html
@@ -19,6 +19,7 @@
 	</f:section>
 
 	<f:section name="Preview">
+		<strong>[GRID] Two Columns (1 | 1)</strong>
 		<flux:widget.grid />
 	</f:section>
 
