--- a/Resources/Private/Elements/GridThreeColumns.html
+++ b/Resources/Private/Elements/GridThreeColumns.html
@@ -22,6 +22,7 @@
 	</f:section>
 
 	<f:section name="Preview">
+		<strong>[GRID] Three Columns (1 | 1 | 1)</strong>
 		<flux:widget.grid />
 	</f:section>
 
