[TASK] Set fixed percentage widths for the base grid FCE backendLayouts

--- a/Resources/Private/Elements/GridFourColumns.html
+++ b/Resources/Private/Elements/GridFourColumns.html
@@ -7,16 +7,16 @@
 		<flux:flexform id="four-columns" label="[GRID] Four Columns (1 | 1 | 1 | 1)" description="Provides four columns to be filled with content elements.">
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
-					<flux:flexform.grid.column>
+					<flux:flexform.grid.column  style="width: 25%">
 						<flux:flexform.content name="FirstColumn" label="First column" />
 					</flux:flexform.grid.column>
-					<flux:flexform.grid.column>
+					<flux:flexform.grid.column  style="width: 25%">
 						<flux:flexform.content name="SecondColumn" label="Second column" />
 					</flux:flexform.grid.column>
-					<flux:flexform.grid.column>
+					<flux:flexform.grid.column  style="width: 25%">
 						<flux:flexform.content name="ThirdColumn" label="Third column" />
 					</flux:flexform.grid.column>
-					<flux:flexform.grid.column>
+					<flux:flexform.grid.column  style="width: 25%">
 						<flux:flexform.content name="FourthColumn" label="Fourth column" />
 					</flux:flexform.grid.column>
 				</flux:flexform.grid.row>
