--- a/Resources/Private/Elements/Grids/GridThreeColumns.html
+++ b/Resources/Private/Elements/Grids/GridThreeColumns.html
@@ -1,24 +1,24 @@
-{namespace flux=Tx_Flux_ViewHelpers}
+{namespace flux=FluidTYPO3\Flux\ViewHelpers}
 
 <f:layout name="Content" />
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:flexform id="three-columns" label="[GRID] Three Columns (1 | 1 | 1)" description="Provides three columns to be filled with content elements.">
-			<flux:flexform.grid>
-				<flux:flexform.grid.row>
-					<flux:flexform.grid.column  style="width: 33.333%">
-						<flux:flexform.content name="FirstColumn" label="First column" />
-					</flux:flexform.grid.column>
-					<flux:flexform.grid.column  style="width: 33.333%">
-						<flux:flexform.content name="SecondColumn" label="Second column" />
-					</flux:flexform.grid.column>
-					<flux:flexform.grid.column  style="width: 33.333%">
-						<flux:flexform.content name="ThirdColumn" label="Third column" />
-					</flux:flexform.grid.column>
-				</flux:flexform.grid.row>
-			</flux:flexform.grid>
-		</flux:flexform>
+		<flux:form id="three-columns" label="[GRID] Three Columns (1 | 1 | 1)" description="Provides three columns to be filled with content elements.">
+			<flux:grid>
+				<flux:grid.row>
+					<flux:grid.column  style="width: 33.333%">
+						<flux:form.content name="FirstColumn" label="First column" />
+					</flux:grid.column>
+					<flux:grid.column  style="width: 33.333%">
+						<flux:form.content name="SecondColumn" label="Second column" />
+					</flux:grid.column>
+					<flux:grid.column  style="width: 33.333%">
+						<flux:form.content name="ThirdColumn" label="Third column" />
+					</flux:grid.column>
+				</flux:grid.row>
+			</flux:grid>
+		</flux:form>
 	</f:section>
 
 	<f:section name="Preview">
@@ -29,13 +29,13 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="FirstColumn" />
+				<flux:form.renderContent area="FirstColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="SecondColumn" />
+				<flux:form.renderContent area="SecondColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:flexform.renderContent area="ThirdColumn" />
+				<flux:form.renderContent area="ThirdColumn" />
 			</div>
 		</div>
 	</f:section>
