--- a/Resources/Private/Elements/Grids/GridThreeColumns.html
+++ b/Resources/Private/Elements/Grids/GridThreeColumns.html
@@ -4,7 +4,7 @@
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:form id="three-columns" label="[GRID] Three Columns (1 | 1 | 1)" description="Provides three columns to be filled with content elements.">
+		<flux:form id="three-columns" label="Three Columns (1 | 1 | 1)" description="Provides three columns to be filled with content elements." wizardTab="Grids">
 			<flux:grid>
 				<flux:grid.row>
 					<flux:grid.column  style="width: 33.333%">
