[TASK] Remove the dashes from the flux template id's to supress the warnings of invalid template names

--- a/Resources/Private/Elements/Grids/GridFourColumns.html
+++ b/Resources/Private/Elements/Grids/GridFourColumns.html
@@ -4,7 +4,7 @@
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:form id="four-columns" label="Four Columns (1 | 1 | 1 | 1)" description="Provides four columns to be filled with content elements." wizardTab="Grids">
+		<flux:form id="fourColumns" label="Four Columns (1 | 1 | 1 | 1)" description="Provides four columns to be filled with content elements." wizardTab="Grids">
 			<flux:flexform.grid>
 				<flux:grid.row>
 					<flux:grid.column  style="width: 25%">
