--- a/Resources/Private/Elements/Grids/GridTwoColumns.html
+++ b/Resources/Private/Elements/Grids/GridTwoColumns.html
@@ -4,7 +4,7 @@
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:form id="two-columns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements." wizardTab="Grids">
+		<flux:form id="twoColumns" label="Two Columns (1 | 1)" description="Provides two columns to be filled with content elements." wizardTab="Grids">
 			<flux:grid>
 				<flux:grid.row>
 					<flux:grid.column  style="width: 50%">
