[TASK] Move to the new 'flux:content.render' viewhelper

--- a/Resources/Private/Elements/Grids/GridFourColumns.html
+++ b/Resources/Private/Elements/Grids/GridFourColumns.html
@@ -32,16 +32,16 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-quarter">
-				<flux:form.renderContent area="FirstColumn" />
+				<flux:content.render area="FirstColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:form.renderContent area="SecondColumn" />
+				<flux:content.render area="SecondColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:form.renderContent area="ThirdColumn" />
+				<flux:content.render area="ThirdColumn" />
 			</div>
 			<div class="gi one-quarter">
-				<flux:form.renderContent area="FourthColumn" />
+				<flux:content.render area="FourthColumn" />
 			</div>
 		</div>
 	</f:section>
