--- a/Resources/Private/Elements/Grids/GridTwoColumns.html
+++ b/Resources/Private/Elements/Grids/GridTwoColumns.html
@@ -26,10 +26,10 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-half">
-				<flux:form.renderContent area="FirstColumn" />
+				<flux:content.render area="FirstColumn" />
 			</div>
 			<div class="gi one-half">
-				<flux:form.renderContent area="SecondColumn" />
+				<flux:content.render area="SecondColumn" />
 			</div>
 		</div>
 	</f:section>
