--- a/Resources/Private/Elements/Grids/GridThreeColumns.html
+++ b/Resources/Private/Elements/Grids/GridThreeColumns.html
@@ -29,13 +29,13 @@
 	<f:section name="Main">
 		<div class="grid">
 			<div class="gi one-third">
-				<flux:form.renderContent area="FirstColumn" />
+				<flux:content.render area="FirstColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:form.renderContent area="SecondColumn" />
+				<flux:content.render area="SecondColumn" />
 			</div>
 			<div class="gi one-third">
-				<flux:form.renderContent area="ThirdColumn" />
+				<flux:content.render area="ThirdColumn" />
 			</div>
 		</div>
 	</f:section>
